--- a/template/index.html
+++ b/template/index.html
@@ -7,21 +7,28 @@
 
 <body>
 <p>&nbsp;</p>
-<p>Blood Donation Future Expectancy</p>
 <p>
-  <label for="textfield3">Recency:</label>
-  	 <input type="text" name="textfield3" id="textfield3">
+<h2>Predicting Blood Donation Future Expectancy</h2>
 </p>
+
+	
 <p>
-  <label for="textfield">Frequency:</label>
+  <label for="textfield3">Recency: </label>
+  <input type="text" name="textfield3" id="textfield3">
+  <label for="textfield">Frequency: </label>
   <input type="text" name="textfield" id="textfield">
-  <label for="textfield2"><br>
-    <br>
-  Monetary:</label>
+  <label for="textfield4">Time(months): </label>
+  <input type="text" name="textfield4" id="textfield4">
+  <label for="textfield2"> Monetary:</label>
   <input type="text" name="textfield2" id="textfield2">
 &nbsp;</p>
-<p>     
-  <input name="submit" type="submit" id="submit" title="Predict" value="">
+<p>
+  <input type="button" name="button" id="button" value="Predict">
+	<br>
+   <br>
+    Blood Donation Expectancy : 
+
 </p>
+<p>&nbsp;</p>
 </body>
 </html>
